Modernize code (#25)
* Modernize code base

* Reformat code